--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!--Footer section-->
         <footer>
             <p>
-                <p class="center">&copy Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
+                <p class="center">Created by Nicholas Reese 2023</p>
                 <br>
             </p>
         </footer>
