--- a/index.html
+++ b/index.html
@@ -41,30 +41,36 @@
  <div id="Slideshow">
     <div id="Slideshow_Background"> 
         <div id="Slideshow_Container">
-            <!-- Slide 1 of 5 -->
+            <!-- Slide 1 of 6 -->
             <div class="mySlides fade">
                 <img class="Slideshow_Images" src="media/images/moi.jpg" alt="Picture of yourself">
                 <div class="text">I'm available to assist you on your project!</div>
             </div>
-            <!-- Slide 2 of 5 -->
+            <!-- Slide 2 of 6 -->
             <div class="mySlides fade">
-                <img class="Slideshow_Images" src="media/images/HTML_CSS_and_JavaScript.jpeg" alt="HTML, CSS, and JS logos"> 
+                <img class="Slideshow_Images" src="media/images/HTML_CSS_and_JavaScript.jpeg" alt="HTML, CSS, and JS logos">
                 <div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,</div>
             </div>
-            <!-- Slide 3 of 5 -->
+            <!-- Slide 3 of 6 -->
             <div class="mySlides fade">
                 <img class="Slideshow_Images" src="media/images/Python.png" alt="Python logo">
                 <div class="text">the popular programming language Python,</div>
             </div>
-            <!-- Slide 4 of 5 -->
+            <!-- Slide 4 of 6 -->
             <div class="mySlides fade">
-                <img class="Slideshow_Images" src="media/images/SQL_and_Database(1).jpg" alt="SQL logo"> 
+                <img class="Slideshow_Images" src="media/images/CSharp.png" alt="CSharp logo">
+                <div class="text">C# and .NET,</div>
+            </div>
+            <!-- Slide 5 of 6 -->
+            <div class="mySlides fade">
+                <img class="Slideshow_Images" src="media/images/SQL_and_Database(1).jpg" alt="SQL logo">
                 <div class="text">back end development, databases and SQL.</div>
             </div>
-            <!-- Slide 5 of 5 -->
+            <!-- Slide 5 of 6 -->
+            <!-- Slide 6 of 6 -->
             <div class="mySlides fade">
-                <img class="Slideshow_Images" src="media/images/portland.jpg" alt="Replace with a picture of your choosing"> 
-                <div class="text"><a class="white-text contact" onclick="openForm()">Contact me now!</a></div> 
+                <img class="Slideshow_Images" src="media/images/portland.jpg" alt="Replace with a picture of your choosing">
+                <div class="text"><a class="white-text contact" onclick="openForm()">Contact me now!</a></div>
             </div>
             <!-- Previous and next buttons -->
             <a class="Previous" onclick="plusSlides(-1)">&#10094;</a>
